--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/runtime": "^7.4.5",
     "app-root-path": "^2.2.1",
+    "axios": "^0.19.0",
     "chokidar": "^2.0.4",
     "classnames": "^2.2.5",
     "clipboard": "^2.0.1",
@@ -73,7 +74,8 @@
     "commitmsg": "commitlint --config ./config/commitlint.config.js -E GIT_PARAMS",
     "changelog": "changelog -u https://github.com/openpitrix/dashboard",
     "locale": "DEBUG=locale ./src/bin/locale.js merge all",
-    "watch:locale": "cross-env npm run locale -- --watch"
+    "watch:locale": "cross-env npm run locale -- --watch",
+    "dbg": "cross-env BABEL_ENV=server NODE_ENV=development node --inspect-brk server/server.js"
   },
   "lint-staged": {
     "*.{js,jsx,md,scss,css}": [
