--- a/package.json
+++ b/package.json
@@ -47,25 +47,24 @@
     "react-transition-group": "^2.6.1",
     "semver": "^5.4.1",
     "serve-favicon": "^2.4.5",
-    "superagent": "^3.8.3",
-    "superagent-mock": "^3.7.0",
     "winston": "^3.1.0"
   },
   "scripts": {
     "dev:client": "cross-env DEBUG=app NODE_ENV=development webpack --config webpack.dev.js --progress",
-    "dev:serve": "cross-env DEBUG_DEPTH=5 DEBUG=app BABEL_ENV=server NODE_ENV=development nodemon -w lib -w server server/server.js",
-    "test:serve": "cross-env DEBUG_DEPTH=5 DEBUG=test BABEL_ENV=server NODE_ENV=development MOCKAPI=1 nodemon -w lib -w server server/server.js",
+    "dev:serve": "cross-env DEBUG=app BABEL_ENV=server NODE_ENV=development nodemon -w lib -w server server/server.js",
     "dev": "cross-env npm-run-all -p watch:locale dev:serve 'dev:client -- --watch'",
     "prod:build": "rimraf dist && npm run locale && NODE_ENV=production webpack -p --config webpack.prod.js --progress",
     "prod:serve": "NODE_ENV=production node dist/server.js",
     "prod": "npm run prod:build && npm run prod:serve",
     "lint-fix": "eslint --fix --ext js,jsx .",
     "test": "jest -u",
-    "e2e:test:fetch": "start-server-and-test dev:serve 8000 cy:fetchData",
-    "e2e:test:open": "start-server-and-test test:serve 8000 cy:open",
-    "e2e:test:run": "start-server-and-test test:serve 8000 cy:run",
+    "e2e:client": "cross-env DEBUG=app NODE_ENV=development webpack --config webpack.dev.js --progress --define process.env.MOCKAPI=1",
+    "e2e:serve": "cross-env MOCKAPI=1 npm-run-all -p dev:serve e2e:client",
+    "e2e:fetch": "start-server-and-test e2e:serve 8000 cy:record",
+    "e2e:open": "start-server-and-test e2e:serve 8000 cy:open",
+    "e2e:run": "start-server-and-test e2e:serve 8000 cy:run",
     "cy:open": "cypress open",
-    "cy:fetchData": "cypress open --env forceAPIRecording=1",
+    "cy:record": "cypress open --env recordApi=1",
     "cy:run": "cypress run --record --key 2a1d655c-7a4d-4a3a-8a31-0683b816f7e6",
     "cy:verify": "cypress verify",
     "precommit": "lint-staged",
