--- a/package.json
+++ b/package.json
@@ -58,14 +58,14 @@
     "prod": "npm run prod:build && npm run prod:serve",
     "lint-fix": "eslint --fix --ext js,jsx .",
     "test": "jest -u",
-    "e2e:client": "cross-env DEBUG=app NODE_ENV=development webpack --config webpack.dev.js --progress --define process.env.MOCKAPI=1",
+    "e2e:client": "cross-env DEBUG=app NODE_ENV=development webpack --config webpack.dev.js --define process.env.MOCKAPI=1",
     "e2e:serve": "cross-env MOCKAPI=1 npm-run-all -p locale dev:serve e2e:client",
     "e2e:fetch": "start-server-and-test e2e:serve 8000 cy:record",
     "e2e:open": "start-server-and-test e2e:serve 8000 cy:open",
     "e2e:run": "start-server-and-test e2e:serve 8000 cy:run",
     "cy:open": "cypress open",
     "cy:record": "cypress open --env recordApi=1",
-    "cy:run": "cypress run --record --key 2a1d655c-7a4d-4a3a-8a31-0683b816f7e6",
+    "cy:run": "cypress run --record --key 2a1d655c-7a4d-4a3a-8a31-0683b816f7e6 --parallel",
     "cy:verify": "cypress verify",
     "precommit": "lint-staged",
     "viz:bundle": "webpack --config webpack.dev.js --profile --json > build/stats.json && webpack-bundle-analyzer build/stats.json",
@@ -115,6 +115,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
+    "@bahmutov/print-env": "^1.2.0",
     "@commitlint/cli": "^7.0.0",
     "@cypress/webpack-preprocessor": "^4.1.0",
     "autoprefixer": "7.1.2",
