--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,13 @@ cache:
 install:
   - yarn
 
+before_script:
+  - yarn e2e:serve
+
 script:
-  - $(npm bin)/print-env TRAVIS
+  - $(npm bin)/print-env CYPRESS
   - yarn test -- --coverage
-  - if [ $TRAVIS_BRANCH = 'master' ]; then yarn cy:verify && yarn e2e:run; fi
+  - if [ $TRAVIS_BRANCH = 'master' ]; then yarn cy:verify && yarn cy:run; fi
   - kill $(jobs -p) || true
 
 after_success:
