--- a/package.json
+++ b/package.json
@@ -52,14 +52,14 @@
   "scripts": {
     "dev:client": "cross-env DEBUG=app NODE_ENV=development webpack --config webpack.dev.js --progress",
     "dev:serve": "cross-env DEBUG=app BABEL_ENV=server NODE_ENV=development nodemon -w lib -w server server/server.js",
-    "dev": "cross-env npm-run-all -p watch:locale dev:serve 'dev:client -- --watch'",
+    "dev": "cross-env run-p watch:locale dev:serve 'dev:client -- --watch'",
     "prod:build": "rimraf dist && npm run locale && NODE_ENV=production webpack -p --config webpack.prod.js --progress",
     "prod:serve": "NODE_ENV=production node dist/server.js",
     "prod": "npm run prod:build && npm run prod:serve",
     "lint-fix": "eslint --fix --ext js,jsx .",
     "test": "jest -u",
     "e2e:client": "cross-env DEBUG=app NODE_ENV=development webpack --config webpack.dev.js --define process.env.MOCKAPI=1",
-    "e2e:serve": "cross-env MOCKAPI=1 npm-run-all -p locale dev:serve e2e:client",
+    "e2e:serve": "cross-env MOCKAPI=1 run-s locale e2e:client dev:serve",
     "e2e:fetch": "start-server-and-test e2e:serve 8000 cy:record",
     "e2e:open": "start-server-and-test e2e:serve 8000 cy:open",
     "e2e:run": "start-server-and-test e2e:serve 8000 cy:run",
