--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
 script:
   - $(npm bin)/print-env CYPRESS
   - yarn test -- --coverage
-  - yarn e2e:serve
+  - yarn e2e:env
   - if [ $TRAVIS_BRANCH = 'master' ]; then yarn cy:verify && yarn cy:run; fi
 
 after_success:
