--- a/package.json
+++ b/package.json
@@ -59,10 +59,11 @@
     "lint-fix": "eslint --fix --ext js,jsx .",
     "test": "jest -u",
     "e2e:client": "cross-env DEBUG=app NODE_ENV=development webpack --config webpack.dev.js --define process.env.MOCKAPI=1",
-    "e2e:serve": "cross-env MOCKAPI=1 run-s locale e2e:client dev:serve",
-    "e2e:fetch": "start-server-and-test e2e:serve 8000 cy:record",
-    "e2e:open": "start-server-and-test e2e:serve 8000 cy:open",
-    "e2e:run": "start-server-and-test e2e:serve 8000 cy:run",
+    "e2e:serve": "cross-env DEBUG=app BABEL_ENV=server NODE_ENV=test node server/server.js",
+    "e2e:env": "cross-env MOCKAPI=1 run-p e2e:serve locale e2e:client",
+    "e2e:fetch": "start-server-and-test e2e:env 8000 cy:record",
+    "e2e:open": "start-server-and-test e2e:env 8000 cy:open",
+    "e2e:run": "start-server-and-test e2e:env 8000 cy:run",
     "cy:open": "cypress open",
     "cy:record": "cypress open --env recordApi=1",
     "cy:run": "cypress run --record --key 2a1d655c-7a4d-4a3a-8a31-0683b816f7e6 --parallel",
