--- a/package.json
+++ b/package.json
@@ -59,11 +59,11 @@
     "lint-fix": "eslint --fix --ext js,jsx .",
     "test": "jest -u",
     "e2e:client": "cross-env DEBUG=app NODE_ENV=development webpack --config webpack.dev.js --define process.env.MOCKAPI=1",
-    "e2e:serve": "cross-env DEBUG=app BABEL_ENV=server NODE_ENV=test node server/server.js",
+    "e2e:serve": "cross-env MOCKAPI=1 DEBUG=app BABEL_ENV=server NODE_ENV=development node server/server.js",
     "e2e:env": "cross-env MOCKAPI=1 run-p e2e:serve locale e2e:client",
-    "e2e:fetch": "start-server-and-test e2e:env 8000 cy:record",
-    "e2e:open": "start-server-and-test e2e:env 8000 cy:open",
-    "e2e:run": "start-server-and-test e2e:env 8000 cy:run",
+    "e2e:record": "start-test e2e:env 8000 cy:record",
+    "e2e:open": "start-test e2e:env 8000 cy:open",
+    "e2e:run": "start-test e2e:env 8000 cy:run",
     "cy:open": "cypress open",
     "cy:record": "cypress open --env recordApi=1",
     "cy:run": "cypress run --record --key 2a1d655c-7a4d-4a3a-8a31-0683b816f7e6 --parallel",
@@ -116,7 +116,6 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
-    "@bahmutov/print-env": "^1.2.0",
     "@commitlint/cli": "^7.0.0",
     "@cypress/webpack-preprocessor": "^4.1.0",
     "autoprefixer": "7.1.2",
