chore: Add serverUrl to travis env

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,15 @@ services:
 language: node_js
 
 node_js:
-  - 8
-  - 10
+  - "8"
+  - "10"
 
 env:
-  SKIP_SASS_BINARY_DOWNLOAD_FOR_CI=true
-  SKIP_NODE_SASS_TESTS=true
+  - SKIP_SASS_BINARY_DOWNLOAD_FOR_CI=true
+  - SKIP_NODE_SASS_TESTS=true
+  - serverUrl=http://139.198.4.179:9100
+  - clientId=x
+  - clientSecret=y
 
 cache:
   yarn: true
