chore: Run e2e env in sequence

--- a/package.json
+++ b/package.json
@@ -60,10 +60,11 @@
     "test": "jest -u",
     "e2e:client": "cross-env DEBUG=app NODE_ENV=development webpack --config webpack.dev.js --define process.env.MOCKAPI=1",
     "e2e:serve": "cross-env MOCKAPI=1 DEBUG=app BABEL_ENV=server NODE_ENV=development node server/server.js",
-    "e2e:env": "cross-env MOCKAPI=1 run-p e2e:serve locale e2e:client",
+    "e2e:env": "cross-env MOCKAPI=1 run-s locale e2e:client e2e:serve",
     "e2e:record": "start-test e2e:env 8000 cy:record",
     "e2e:open": "start-test e2e:env 8000 cy:open",
     "e2e:run": "start-test e2e:env 8000 cy:run",
+    "e2e:run:local": "start-test e2e:env 8000 'cypress run'",
     "cy:open": "cypress open",
     "cy:record": "cypress open --env recordApi=1",
     "cy:run": "cypress run --record --key 2a1d655c-7a4d-4a3a-8a31-0683b816f7e6 --parallel",
