--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ yarn-error.log*
 # local config
 /server/local_config.yml
 
-*.tgz
+/*.tgz
 
 \#*\#
 /.emacs.desktop
@@ -36,3 +36,5 @@ tmp/
 
 cypress/videos/
 cypress/screenshots/
+
+cypress.env.json
