--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/runtime": "^7.4.5",
     "app-root-path": "^2.2.1",
+    "axios": "^0.19.0",
     "chokidar": "^2.0.4",
     "classnames": "^2.2.5",
     "clipboard": "^2.0.1",
@@ -46,26 +47,27 @@
     "react-transition-group": "^2.6.1",
     "semver": "^5.4.1",
     "serve-favicon": "^2.4.5",
-    "superagent": "^3.8.3",
-    "superagent-mock": "^3.7.0",
     "winston": "^3.1.0"
   },
   "scripts": {
     "dev:client": "cross-env DEBUG=app NODE_ENV=development webpack --config webpack.dev.js --progress",
-    "dev:serve": "cross-env DEBUG_DEPTH=5 DEBUG=app BABEL_ENV=server NODE_ENV=development nodemon -w lib -w server server/server.js",
-    "test:serve": "cross-env DEBUG_DEPTH=5 DEBUG=test BABEL_ENV=server NODE_ENV=development MOCKAPI=1 nodemon -w lib -w server server/server.js",
-    "dev": "cross-env npm-run-all -p watch:locale dev:serve 'dev:client -- --watch'",
+    "dev:serve": "cross-env DEBUG=app BABEL_ENV=server NODE_ENV=development nodemon -w lib -w server server/server.js",
+    "dev": "cross-env run-p watch:locale dev:serve 'dev:client -- --watch'",
     "prod:build": "rimraf dist && npm run locale && NODE_ENV=production webpack -p --config webpack.prod.js --progress",
     "prod:serve": "NODE_ENV=production node dist/server.js",
     "prod": "npm run prod:build && npm run prod:serve",
     "lint-fix": "eslint --fix --ext js,jsx .",
     "test": "jest -u",
-    "e2e:test:fetch": "start-server-and-test dev:serve 8000 cy:fetchData",
-    "e2e:test:open": "start-server-and-test test:serve 8000 cy:open",
-    "e2e:test:run": "start-server-and-test test:serve 8000 cy:run",
+    "e2e:client": "cross-env DEBUG=app NODE_ENV=development webpack --config webpack.dev.js --define process.env.MOCKAPI=1",
+    "e2e:serve": "cross-env MOCKAPI=1 DEBUG=app BABEL_ENV=server NODE_ENV=development node server/server.js",
+    "e2e:env": "cross-env MOCKAPI=1 run-s locale e2e:client e2e:serve",
+    "e2e:record": "start-test e2e:env 8000 cy:record",
+    "e2e:open": "start-test e2e:env 8000 cy:open",
+    "e2e:run": "start-test e2e:env 8000 cy:run",
+    "e2e:run:local": "start-test e2e:env 8000 'cypress run'",
     "cy:open": "cypress open",
-    "cy:fetchData": "cypress open --env forceAPIRecording=1",
-    "cy:run": "cypress run --record --key 2a1d655c-7a4d-4a3a-8a31-0683b816f7e6",
+    "cy:record": "cypress open --env recordApi=1",
+    "cy:run": "cypress run --record --key 2a1d655c-7a4d-4a3a-8a31-0683b816f7e6 --parallel",
     "cy:verify": "cypress verify",
     "precommit": "lint-staged",
     "viz:bundle": "webpack --config webpack.dev.js --profile --json > build/stats.json && webpack-bundle-analyzer build/stats.json",
@@ -73,7 +75,8 @@
     "commitmsg": "commitlint --config ./config/commitlint.config.js -E GIT_PARAMS",
     "changelog": "changelog -u https://github.com/openpitrix/dashboard",
     "locale": "DEBUG=locale ./src/bin/locale.js merge all",
-    "watch:locale": "cross-env npm run locale -- --watch"
+    "watch:locale": "cross-env npm run locale -- --watch",
+    "dbg": "cross-env BABEL_ENV=server NODE_ENV=development node --inspect-brk server/server.js"
   },
   "lint-staged": {
     "*.{js,jsx,md,scss,css}": [
