feat: Koa webpack hmr
refactor: server render template

--- a/package.json
+++ b/package.json
@@ -51,16 +51,16 @@
     "winston": "^3.1.0"
   },
   "scripts": {
-    "dev:client": "cross-env DEBUG=app NODE_ENV=development webpack --config webpack.dev.js --progress",
-    "dev:serve": "cross-env DEBUG=app BABEL_ENV=server NODE_ENV=development nodemon -w lib -w server server/server.js",
-    "dev": "cross-env rimraf build && run-p watch:locale dev:serve 'dev:client -- --watch'",
+    "dev:client": "cross-env DEBUG=app NODE_ENV=development webpack --config webpack.dev.js --progress -w",
+    "dev:serve": "cross-env DEBUG=app NODE_ENV=development rimraf build && node start-server.js",
+    "dev": "cross-env run-p watch:locale dev:serve",
     "prod:build": "rimraf dist && npm run locale && NODE_ENV=production webpack -p --config webpack.prod.js",
     "prod:serve": "NODE_ENV=production node dist/server.js",
     "prod": "cross-env run-s prod:build prod:serve",
     "lint-fix": "eslint --fix --ext js,jsx .",
     "test": "jest -u",
     "e2e:client": "cross-env DEBUG=app NODE_ENV=development webpack --config webpack.dev.js --define process.env.MOCKAPI=1",
-    "e2e:serve": "cross-env MOCKAPI=1 DEBUG=app BABEL_ENV=server NODE_ENV=development node server/server.js",
+    "e2e:serve": "cross-env MOCKAPI=1 DEBUG=app NODE_ENV=development node server/server.js",
     "e2e:env": "cross-env MOCKAPI=1 run-s locale e2e:client e2e:serve",
     "e2e:record": "start-test e2e:env 8000 cy:record",
     "e2e:open": "start-test e2e:env 8000 cy:open",
@@ -71,13 +71,12 @@
     "cy:run": "cypress run --record --key 2a1d655c-7a4d-4a3a-8a31-0683b816f7e6 --parallel",
     "cy:verify": "cypress verify",
     "precommit": "lint-staged",
-    "viz:bundle": "webpack --config webpack.dev.js --profile --json > build/stats.json && webpack-bundle-analyzer build/stats.json",
     "report-cov": "cat ./build/coverage/lcov.info | codecov",
     "commitmsg": "commitlint --config ./config/commitlint.config.js -E GIT_PARAMS",
     "changelog": "changelog -u https://github.com/openpitrix/dashboard",
-    "locale": "DEBUG=locale ./src/bin/locale.js merge all",
+    "locale": "./src/bin/locale.js merge all",
     "watch:locale": "cross-env npm run locale -- --watch",
-    "dbg": "cross-env BABEL_ENV=server NODE_ENV=development node --inspect-brk server/server.js"
+    "dbg": "cross-env NODE_ENV=development node --inspect-brk server/server.js"
   },
   "lint-staged": {
     "*.{js,jsx,md,scss,css}": [
@@ -124,7 +123,6 @@
     "babel-eslint": "^8.0.2",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-css-modules-transform": "^1.5.0",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^3.0.0",
@@ -134,7 +132,7 @@
     "commander": "^2.20.0",
     "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^5.2.0",
-    "css-loader": "^0.28.11",
+    "css-loader": "^3.1.0",
     "cypress": "^3.3.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
@@ -150,6 +148,7 @@
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
+    "koa-webpack": "^5.2.4",
     "lint-staged": "^7.0.4",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
