--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
-package-lock=false
 scripts-prepend-node-path=true
+registry=https://registry.npm.taobao.org
+sass-binary-site=https://npm.taobao.org/mirrors/node-sass
